--- a/resources/views/index.liquid
+++ b/resources/views/index.liquid
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>App</title>
-  </head>
-  <body>
-  <h1>Hello World</h1>
-    {{ message }}
-  </body>
-</html>
+{% layout "layouts/app-layout.liquid" %}
+
+{% block content %}
+
+{% endblock %}
